README, some renaming
